# tessellate-ipu

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/dependencies/: jax_ipu_addons-0.0.1-py2.py3-none-any.whl
.github/scripts/: check_ipu_hardware_device.py  run_ipu_notebook.py
.github/workflows/: jax-ipu-experimental-addons-ci-internal.yaml  jax-ipu-experimental-addons-internal.yaml  jax-ipu-experimental-addons-public.yaml  jax-ipu-research-ci-internal.yaml  notebook-tests-public.yaml  tessellate-ipu-internal.yaml  tessellate-ipu-public.yaml  tests-internal.yaml  tests-public.yaml
docs/: basics.md  development.md  linalg_benchmarks.md  operations.md
docs/benchmarks/: poplibs_linalg_bench.cpp
examples/: hessenberg_example.py  real_symmetric_eigh.py  tridiag_solver_example.py
examples/demo/: demo1.py  demo2.py  demo_complex_mpmd.py  demo_inplace_loop.py  demo_io_tiles.py  demo_mpmd.py  demo_vertex.cpp  demo_vertex.py
jax_ipu_experimental_addons/tile/: README.md  __init__.py  common.hpp  external_libs.py  tile_array.py  tile_array_primitives.py  tile_array_primitives_impl.cpp  tile_common_utils.py  tile_interpreter.py  tile_interpreter_hw_primitives.py  tile_interpreter_lax_binary.py  tile_interpreter_lax_dot.py  tile_interpreter_lax_reduce.py  tile_interpreter_lax_unary.py  tile_interpreter_linalg_jacobi.py  tile_interpreter_linalg_qr.py  tile_interpreter_primitives.py  tile_interpreter_random.py  tile_interpreter_vertex_utils.py
jax_ipu_experimental_addons/tile/vertex/: intrinsics_utils.hpp  tile_prim_vertex.cpp  tile_qr_vertex.cpp
jax_ipu_experimental_addons/utils/: typing.py
jax_ipu_research/: __init__.py  _version.py
jax_ipu_research/tile/: README.md  __init__.py  common.hpp  external_libs.py  tile_array.py  tile_array_primitives.py  tile_array_primitives_impl.cpp  tile_array_utils.hpp  tile_common_utils.py  tile_dot_vertex_utils.hpp  tile_interpreter.py  tile_interpreter_hw_primitives.py  tile_interpreter_lax_binary.py  tile_interpreter_lax_dot.py  tile_interpreter_lax_reduce.py  tile_interpreter_lax_sort.py  tile_interpreter_lax_unary.py  tile_interpreter_linalg.py  tile_interpreter_linalg_jacobi.py  tile_interpreter_linalg_qr.py  tile_interpreter_primitives.py  tile_interpreter_primitives_impl.cpp  tile_interpreter_random.py  tile_interpreter_vertex_utils.py
jax_ipu_research/tile/poplin/: ConvPartialsStridesPacking.cpp
jax_ipu_research/tile/vertex/: hw_vertex.cpp  intrinsics_utils.hpp  ipu_model_types.hpp  tile_jacobi_vertex.cpp  tile_prim_vertex.cpp  tile_qr_vertex.cpp
jax_ipu_research/utils/: __init__.py  ipu_device.py
notebooks/: 01-tessellate-ipu-tile-api-basics.ipynb  IPU Peak Flops.ipynb  IPU benchmarks.ipynb
tessellate_ipu/: __init__.py  _version.py
tessellate_ipu/core/: __init__.py  tile_array.py  tile_array_primitives.py  tile_array_primitives_impl.cpp  tile_common_utils.py  tile_interpreter.py  tile_interpreter_primitives.py  tile_interpreter_vertex_utils.py
tessellate_ipu/core/vertex/: intrinsics_utils.hpp  ipu_amp.hpp  ipu_model_types.hpp  tile_cumulative_ops_vertex.cpp  tile_hessenberg_vertex.cpp  tile_jacobi_vertex.cpp  tile_qr_vertex.cpp  tile_small_dot.cpp  tile_small_dot.hpp  tile_tridiagonal_eigh.cpp  tile_tridiagonal_solver_vertex.cpp
tessellate_ipu/lax/: __init__.py  tile_lax_array.py  tile_lax_binary.py  tile_lax_cumulative_ops.py  tile_lax_dot.py  tile_lax_gather.py  tile_lax_reduce.py  tile_lax_scatter.py  tile_lax_small_dot.py  tile_lax_unary.py  tile_random.py
tessellate_ipu/lib/: base_types.cpp  base_types.hpp  base_types_py.hpp  ipu_custom_primitive.hpp  tessellate_ipu_core.cpp  tessellate_ipu_ops_jax.cpp  tile_array_ops.cpp  tile_array_ops.hpp  tile_array_utils.cpp  tile_array_utils.hpp  tile_map_ops.cpp  tile_map_ops.hpp  tile_map_ops_py.hpp
tessellate_ipu/lib/poplin/: ConvPartialsStridesPacking.hpp  conv_partial_vertex_utils_py.hpp
tessellate_ipu/linalg/: __init__.py  tile_linalg_hessenberg.py  tile_linalg_jacobi.py  tile_linalg_qr.py  tile_linalg_tridiagonal_eigenvalue.py  tile_linalg_tridiagonal_eigh.py  tile_linalg_tridiagonal_solver.py
tessellate_ipu/tile/: README.md  __init__.py  external_libs.py  tile_array_primitives.py  tile_common_utils.py  tile_interpreter_lax_binary.py  tile_interpreter_lax_dot.py  tile_interpreter_lax_unary.py  tile_interpreter_linalg_jacobi.py  tile_interpreter_primitives.py  tile_interpreter_primitives_impl.cpp  tile_interpreter_random.py
tessellate_ipu/utils/: __init__.py  env.py
tests/core/: custom_arange_primitive.py  custom_arange_vertex.cpp  test_tile_array.py  test_tile_array_primitives.py  test_tile_common_utils.py  test_tile_interpreter.py  test_tile_interpreter_hw_primitives.py  test_tile_interpreter_primitives.py  test_tile_interpreter_vertex_utils.py
tests/lax/: test_tile_lax_array.py  test_tile_lax_basic.py  test_tile_lax_cumulative_ops.py  test_tile_lax_dot.py  test_tile_lax_gather.py  test_tile_lax_reduce.py  test_tile_lax_scatter.py  test_tile_lax_small_dot.py  test_tile_random.py
tests/lib/: test_tessellate_core.py  test_tessellate_ops_jax.py
tests/linalg/: test_tile_linalg_eig_hess.py  test_tile_linalg_hessenberg.py  test_tile_linalg_jacobi.py  test_tile_linalg_qr.py  test_tile_linalg_tridiagonal_solver.py
tests/tile/: custom_arange_primitive.py  custom_arange_vertex.cpp  test_tile_array.py  test_tile_array_primitives.py  test_tile_common_utils.py  test_tile_interpreter.py  test_tile_interpreter_hw_primitives.py  test_tile_interpreter_lax.py  test_tile_interpreter_lax_basic.py  test_tile_interpreter_lax_dot.py  test_tile_interpreter_lax_reduce.py  test_tile_interpreter_lax_sort.py  test_tile_interpreter_linalg.py  test_tile_interpreter_linalg_jacobi.py  test_tile_interpreter_linalg_qr.py  test_tile_interpreter_primitives.py  test_tile_interpreter_random.py  test_tile_interpreter_vertex_utils.py
tests/utils/: test_ipu_device.py
